# zaparoo-discord-bot

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  bot.py  config.example.toml  discord-issue-bot.service  pyproject.toml
tests/: conftest.py  test_external_services.py  test_file_handling.py  test_integration.py  test_pure_functions.py
