[project]
name = "discord-issue-bot"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.3.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "PyGithub>=2.1.0",
    "google-genai>=1.73.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "aioresponses>=0.7.0",
    "dpytest @ git+https://github.com/CraftSpider/dpytest.git@e443a7c3447c35527a975dfcc3cde76068e15227",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "ASYNC", # flake8-async
]
ignore = [
    "SIM105",  # contextlib.suppress -- try/except/pass is clearer for async fire-and-forget
    "ASYNC240", # pathlib in async -- only used for logging, not I/O
]

[tool.ruff.lint.isort]
known-first-party = ["bot"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
]
